# YouFinance

./: .prettierignore  README.md  index.html  package.json  rustfmt.toml  tailwind.config.js
.github/: CODEOWNERS
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-02-12-081335_create_providers/: up.sql
src-tauri/migrations/2024-02-12-081801_create_accounts/: up.sql
src-tauri/migrations/2024-02-12-082700_create_transactions/: up.sql
src-tauri/migrations/2024-02-12-082800_create_tags/: up.sql
src-tauri/migrations/2024-02-12-082900_create_transaction_tags/: down.sql  up.sql
src-tauri/src/: database.rs  main.rs  model.rs  schema.rs
src-tauri/src/banking/: apierror.rs  mod.rs  provider_gocardless.rs  provider_gocardless_structs.rs  providers.rs  trait_banking_api.rs
src/components/: Transaction.tsx  TransactionList.tsx  TransactionTypes.tsx
src/components/BankAccountDataProvider/: AddModal.tsx  List.tsx  Select.tsx
src/components/BankAccounts/: List.tsx  Select.tsx
src/components/Navigation/: ListMenu.tsx  Menu.tsx  SettingsListMenu.tsx
src/models/: typeshare_definitions.ts
src/routes/: Root.tsx
src/routes/settings/: BankAccountDataProvider.tsx  BankAccounts.tsx
