[package]
name = "you-finance"
version = "0.0.0"
description = "A Tauri App"
authors = ["Lukas Hirsch"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
libsqlite3-sys =  { version ="0.27.0", features = ["bundled"] }
dirs = "5.0.1"
chrono = "0.4.34"
typeshare = "1.0.1"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.20"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
